--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,11 @@ ENV/
 
 # === Gmail Cleanup ===
 # OAuth credentials and tokens
-credentials.json
-token.json
+scripts/python/mail_handler/credentials.json
+scripts/python/mail_handler/token.json
+
+# === Ansible ===
+.creds
 
 # === IDE / OS ===
 .vscode/
