--- a/scripts/ansible/proxmox.yml
+++ b/scripts/ansible/proxmox.yml
@@ -4,3 +4,8 @@ user: "{{ lookup('env', 'PROXMOX_USER') }}"
 token_id: "{{ lookup('env', 'PROXMOX_TOKENID') }}"
 token_secret: "{{ lookup('env', 'PROXMOX_TOKENSECRET') }}"
 validate_certs: false
+want_facts: true
+want_proxmox_nodes_ansible_host: true
+
+compose:
+    ansible_host: proxmox_net0.ip | ansible.utils.ipaddr('address')
