--- a/scripts/ansible/roles/corekeeper_shutdown/tasks/main.yml
+++ b/scripts/ansible/roles/corekeeper_shutdown/tasks/main.yml
@@ -2,4 +2,5 @@
 - name: Shutdown server if running
   ansible.builtin.shell:
     cmd: '/home/ckserver/ckserver stop'
-    become_user: ckserver
+  become: true
+  become_user: ckserver
